--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,5 @@
 
-@import './variables.css';
+@import url('./variables.css');
 
 * {
   box-sizing: border-box;
@@ -11,7 +11,7 @@
 :where(:root) {
   background-color: var(--background-base);
   color: var(--font-base);
-  font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+  font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN", meiryo, sans-serif;
   font-style: unset;
   font-size: 100%;
   font-weight: 500;
@@ -24,7 +24,7 @@
   line-break: strict;
   overflow-wrap: anywhere;
   hyphens: auto;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; /* stylelint-disable-line declaration-no-important */
   text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
 }
@@ -43,7 +43,7 @@
   color: unset;
   text-decoration-line: none;
   text-decoration-thickness: from-font;
-  text-decoration-color: color-mix(in sRGB, currentColor, transparent 40%);
+  text-decoration-color: var(--underline-base);
   text-underline-offset: .25em;
 }
 
