--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,9 +1,7 @@
-
 :root {
-
-/* font */
-  --font-sans: "Noto Sans JP", "Hiragino Kaku Gothic ProN", meiryo, sans-serif;
-  --font-sans-serif: "Noto Serif JP", serif;
+  /* font */
+  --font-sans: 'Noto Sans JP', 'Hiragino Kaku Gothic ProN', meiryo, sans-serif;
+  --font-sans-serif: 'Noto Serif JP', serif;
   --base-text-unit: 16;
   --rem-ratio: calc(1rem / var(--base-text-unit));
   --font-normal: 400;
@@ -15,11 +13,11 @@
   --leading-normal: 1.7;
   --leading-relaxed: 1.8;
   --leading-loose: 2;
-  --tracking-tight: .02em;
-  --tracking-normal: .05em;
-  --tracking-medium: .07em;
+  --tracking-tight: 0.02em;
+  --tracking-normal: 0.05em;
+  --tracking-medium: 0.07em;
 
-/* size */
+  /* size */
   --layout-width-min: 375;
   --layout-width-max: 1440;
   --aspect-video: 16/9;
@@ -29,22 +27,22 @@
   --rounded-m: 7px;
   --rounded-l: 30px;
 
-/* color */
-  --color-grayscale-0: #FFF;
+  /* color */
+  --color-grayscale-0: #fff;
   --color-grayscale-1000: #000;
   --background-base: var(--color-grayscale-0);
   --font-base: var(--color-grayscale-1000);
   --underline-base: color-mix(in srgb, currentcolor, transparent 40%);
 
-/* z-index */
+  /* z-index */
   --back-z-index: -1;
   --default-z-index: 1;
   --front-z-index: 2;
   --menu-z-index: 3;
 
-/* motion time */
-  --speed-quick: .3s;
-  --speed-normal: .5s;
-  --speed-slow: .7s;
-  --speed-over-slow: .9s;
+  /* motion time */
+  --speed-quick: 0.3s;
+  --speed-normal: 0.5s;
+  --speed-slow: 0.7s;
+  --speed-over-slow: 0.9s;
 }
